--- a/src/assets/styles/components/_login-signup.scss
+++ b/src/assets/styles/components/_login-signup.scss
@@ -1,43 +1,65 @@
-.login-page{
-
-    .btn-link {
-        border: 0;
-        font-size: 1.5rem;
-        background-color: transparent;
-        text-decoration: none;
-        transition: .5s;
-        cursor: pointer;
+.login-signup {
+    padding-top: 50px;
+    background-color: #f9fafc;
+    height: calc(100vh - 70px);
+    color: #172b4d;
+    .login-container {
+        background-color: #fff;
+        border-radius: 3px;
+        max-width: 400px;
+        margin: 0 auto;
+        align-items: center;
+        padding: 30px 40px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.116);
+        min-width: 400px;
+        p {
+            color: #5e6c84;
+            text-align: center;
+            font-size: 16px;
+            letter-spacing: -0.01em;
+            line-height: 28px;
+            font-weight: 700;
+            margin-bottom: 25px;
+            &:last-child {
+                color: #5e6c84;
+                text-decoration: underline;
+                cursor: pointer;
+                font-weight: 500;
+            }
+        }
+        form {
+            width: 100%;
+            input {
+                font-size: 14px;
+                background-color: #fafbfc;
+                border-radius: 3px;
+                border: 2px solid #dfe1e6;
+                height: 44px;
+                padding: 7px;
+                transition: background-color 0.2s ease-in-out 0s, border-color 0.2s ease-in-out 0s;
+                box-shadow: unset;
+                margin-bottom: 17px;
+                width: 100%;
+            }
+            .login-signup-btn {
+                color: #fff;
+                text-transform: uppercase;
+                text-decoration: none;
+                background: #2a2828;
+                padding: 14px 28px 14px;
+                border-radius: 50px;
+                display: inline-block;
+                border: none;
+                transition: all 0.4s ease 0s;
+                font-weight: 600;
+                color: whitesmoke;
+            }
+            .login-signup-btn:hover {
+                text-shadow: 0px 0px 6px rgba(255, 255, 255, 1);
+                -webkit-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
+                -moz-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
+                transition: all 0.4s ease 0s;
+            }
+        }
     }
-    
-    .btn-link:hover {
-        transform: scale(1.2);
-    }
-    input {
-        padding: 13px;
-        border: none;
-        border-radius: 5px;
-        margin-right: 1rem;
-    }
-    
-    .login-signup-btn {
-        color: #fff;
-        text-transform: uppercase;
-        text-decoration: none;
-        background: #2a2828;
-        padding: 14px;
-        border-radius: 50px;
-        display: inline-block;
-        border: none;
-        transition: all 0.4s ease 0s;
-        font-weight: 600;
-        color: whitesmoke;
-    }
-    
-    .login-signup-btn:hover {
-        text-shadow: 0px 0px 6px rgba(255, 255, 255, 1);
-        -webkit-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
-        -moz-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
-        transition: all 0.4s ease 0s;
-    }
-
 }
