hamburger scss update

--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -22,6 +22,8 @@
 @import "components/add-toy.scss";
 @import "components/toy-filter.scss";
 @import "components/review-add.scss";
+@import "components/hamburger";
+
 
 //Pages
 @import "pages/toy-details.scss";
