--- a/src/assets/styles/components/_toy-preview.scss
+++ b/src/assets/styles/components/_toy-preview.scss
@@ -1,8 +1,7 @@
 .toy-card {
-    // display: flex;
-    // flex-direction: column;
     background: white;
     border-radius: 10px;
+    padding-bottom: 2px;
     @mixin box-shadow($value) {
         -webkit-box-shadow: $value;
         -moz-box-shadow: $value;
@@ -22,7 +21,7 @@
     }
 
     button{
-        border: none;
+        // border: none;
         background-color: inherit;
         padding: 7px;
         font-size: 1rem;
