--- a/src/assets/styles/pages/_user-profile.scss
+++ b/src/assets/styles/pages/_user-profile.scss
@@ -1,10 +1,8 @@
-.login-signup {
+.user-profile {
     background: transparent !important;
-    padding-top: 50px;
-    background-color: #f9fafc;
-    height: calc(100vh - 70px);
+    padding: 50px;
     color: #172b4d;
-    .login-container {
+    .user-profile-container {
         background-color: #fff;
         border-radius: 3px;
         max-width: 400px;
@@ -30,7 +28,10 @@
         }
         form {
             width: 100%;
-            input {
+            .unmuttable {
+                background: #80808026;
+            }
+            .user-profile-input {
                 font-size: 14px;
                 background-color: #fafbfc;
                 border-radius: 3px;
@@ -41,6 +42,14 @@
                 box-shadow: unset;
                 margin-bottom: 17px;
                 width: 100%;
+            }
+            .is-admin-container {
+                justify-content: space-between;
+                .is-admin-checkbox {
+                    height: 25px;
+                    width: 25px;
+                    cursor: pointer;
+                }
             }
         }
     }
