--- a/src/assets/styles/basics/_helpers.scss
+++ b/src/assets/styles/basics/_helpers.scss
@@ -1,16 +1,29 @@
 // Font Sizes
-.fs12 { font-size: rem(12px); }
-.fs14 { font-size: rem(14px); }
-.fs18 { font-size: rem(18px); }
-.fs20 { font-size: rem(20px); }
-.fs24 { font-size: rem(24px); }
-.fs28 { font-size: rem(28px); }
-.fs30 { font-size: rem(30px); }
+.fs12 {
+    font-size: rem(12px);
+}
+.fs14 {
+    font-size: rem(14px);
+}
+.fs18 {
+    font-size: rem(18px);
+}
+.fs20 {
+    font-size: rem(20px);
+}
+.fs24 {
+    font-size: rem(24px);
+}
+.fs28 {
+    font-size: rem(28px);
+}
+.fs30 {
+    font-size: rem(30px);
+}
 
 // flex helpers
 
 .flex {
-
     display: flex;
 
     > *.full {
@@ -37,4 +50,41 @@
 }
 .portrait-ratio {
     @include aspect-ratio(9, 16);
+}
+
+//Styled Form and input
+
+.styled-container {
+    background-color: #fff;
+    border-radius: 3px;
+    max-width: 400px;
+    margin: 0 auto;
+    align-items: center;
+    padding: 30px 40px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.116);
+    min-width: 400px;
+    p {
+        color: #5e6c84;
+        text-align: center;
+        font-size: 16px;
+        letter-spacing: -0.01em;
+        line-height: 28px;
+        font-weight: 700;
+        margin-bottom: 25px;
+    }
+    form {
+        width: 100%;
+        input {
+            font-size: 14px;
+            background-color: #fafbfc;
+            border-radius: 3px;
+            border: 2px solid #dfe1e6;
+            height: 44px;
+            padding: 7px;
+            transition: background-color 0.2s ease-in-out 0s, border-color 0.2s ease-in-out 0s;
+            box-shadow: unset;
+            margin-bottom: 17px;
+            width: 100%;
+        }
+    }
 }
