--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -9,6 +9,7 @@
 @import "basics/layout.scss";
 @import "basics/base.scss";
 @import "basics/buttons.scss";
+@import "basics/scroll-bar";
 
 // Components
 @import "components/main-header.scss";
