--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -24,6 +24,7 @@
 @import "components/toy-filter.scss";
 @import "components/review-add.scss";
 @import "components/hamburger";
+@import "components/app-footer";
 
 
 //Pages
